--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "docker-compose-logs-processor": "index.js"
   },
+  "files": [
+    "index.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
